# digital-miss

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
apps/barge-in-poc/: .env.example  README.md  index.html  next.config.ts  package.json  tailwind.config.mjs  tsconfig.json
apps/student-classroom/: .env.example  README.md  index.html  next.config.ts  package.json  tailwind.config.js  tailwind.config.mjs  tsconfig.json  (+1 more)
docs/: ARCHITECTURE.md  SPRINT_0.md
services/digital-teacher-render/: .env.local.example  Dockerfile  README.md  pyproject.toml
services/digital-teacher-render/app/: main.py  settings.py
services/digital-teacher-render/app/adapters/: __init__.py  avatar_base.py  avatar_mock.py  avatar_replicate.py  tts_base.py  tts_mock.py  tts_replicate.py
services/digital-teacher-render/app/api/: render_router.py
services/digital-teacher-render/app/models/: __init__.py  schemas.py
services/digital-teacher-render/app/services/: agora_publisher.py  board_renderer.py  lip_sync.py  persona_synth.py  render_pipeline.py  tts.py
services/digital-teacher-render/tests/: __init__.py  test_smoke.py
services/digital-teacher-render/tests/adapters/: test_persona_synth.py  test_replicate_factory.py
services/strategy-engine/: Dockerfile  README.md  pyproject.toml
services/strategy-engine/app/: main.py  settings.py
services/strategy-engine/app/api/: profile_router.py  rules_router.py  strategy_router.py
services/strategy-engine/app/models/: __init__.py  schemas.py
services/strategy-engine/app/rules/: __init__.py  engine.py  evaluator.py  loader.py
services/strategy-engine/app/services/: profile_store.py
services/strategy-engine/rules/: mvp_v1.yaml
services/strategy-engine/tests/: __init__.py  test_engine.py
(+133 files in other folders)
