[project]
name = "digital-teacher-render"
version = "0.1.0"
description = "数字人渲染服务 · TTS + 唇形 + 动画 + Agora 推流"
requires-python = ">=3.11"
readme = "README.md"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "redis>=5.1.0",
    "aiokafka>=0.11.0",
    "structlog>=24.4.0",
    "numpy>=2.0.0",
    # 生产环境按需安装:
    #   torch / onnxruntime-gpu
    #   agora-python-server-sdk(私有制品)
]

[project.optional-dependencies]
gpu = [
    "torch>=2.4.0",
    "onnxruntime-gpu>=1.19.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
